--- a/ProjectUbuild/Views/Home/Guidelines.cshtml
+++ b/ProjectUbuild/Views/Home/Guidelines.cshtml
@@ -29,7 +29,7 @@
     <!--end of container-->
 </section>
 
-<section>
+<section style="margin-top: -60px">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
