--- a/ProjectUbuild/Views/Loan/Eligibility.cshtml
+++ b/ProjectUbuild/Views/Loan/Eligibility.cshtml
@@ -30,7 +30,7 @@
 </section>
 
 
-<section ng-controller="EligibilityCtrl" ng-init="init()" style="padding-top: 0">
+<section ng-controller="EligibilityCtrl" ng-init="init()" style="margin-top: -60px">
     <div class="card-progress" data-ng-show="loading" style="background-color: rgba(255, 255, 255, 0.8); display: block;">
         <div class="progress-circle-indeterminate progress-circle-master"></div>
     </div>
